# bevygame

./: Cargo.toml
src/: components.rs  config.rs  debug.rs  lib.rs  main.rs  map.xcf  resources.rs  setup.rs
src/systems/: animation.rs  camera_movement.rs  collision.rs  mod.rs  player_control.rs  score.rs
